# AGenNext-Protocols

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  index.html  pyproject.toml
.github/workflows/: ci.yml  release.yml
agennext/: __init__.py
agennext/acp/: __init__.py
agennext/agent_governance/: __init__.py
agennext/agentdid/: __init__.py
agennext/agentid/: __init__.py
agennext/agui/: __init__.py
agennext_protocols.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: CNAME.example  index.html
tests/: test_smoke.py
